fixing dark mode attempt 1

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
   height: 100%;
   margin: 0 auto;
-  background-color: var(--bg);
 }
